--- a/1.3/docker-compose.yml
+++ b/1.3/docker-compose.yml
@@ -1,17 +1,19 @@
 version: '3'
 
 services:
-  # Define a Telegraf service
-  telegraf:
-    image: telegraf:1.4.0
+  # Define a collectd service
+  collectd:
+    image: onesourceintegrations/collectd
+    privileged: yes
     volumes:
-      - ./etc/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - ./etc/collectd.conf:/etc/collectd.conf:ro
     links:
       - influxdb
     ports:
       - "8092:8092/udp"
       - "8094:8094"
       - "8125:8125/udp"
+
   # Define an InfluxDB service
   influxdb:
     image: influxdb:1.3.5
@@ -19,43 +21,13 @@ services:
       - ./data/influxdb:/var/lib/influxdb
     ports:
       - "8086:8086"
-  # Define a Chronograf service
-  chronograf:
-    image: chronograf:1.3.8
+
+  # Define a grafana service
+  grafana:
+    image: grafana/grafana
     environment:
-      INFLUXDB_URL: http://influxdb:8086
-      KAPACITOR_URL: http://kapacitor:9092
+      GF_INSTALL_PLUGINS: grafana-clock-panel,grafana-simple-json-datasource
     ports:
-      - "8888:8888"
+      - "3000:3000"
     links:
       - influxdb
-      - kapacitor
-  # Define a Kapacitor service
-  kapacitor:
-    image: kapacitor:1.3.3
-    environment:
-      KAPACITOR_HOSTNAME: kapacitor
-      KAPACITOR_INFLUXDB_0_URLS_0: http://influxdb:8086
-    links:
-      - influxdb
-    ports:
-      - "9092:9092"
-  # Define a service for using the influx CLI tool.
-  # docker-compose run influxdb-cli
-  influxdb-cli:
-    image: influxdb:1.3.5
-    entrypoint:
-      - influx
-      - -host
-      - influxdb
-    links:
-      - influxdb
-  # Define a service for using the kapacitor CLI tool.
-  # docker-compose run kapacitor-cli
-  kapacitor-cli:
-    image: kapacitor:1.3.3
-    entrypoint: bash
-    environment:
-      KAPACITOR_URL: http://kapacitor:9092
-    links:
-      - kapacitor
