--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,10 @@ services:
     image: influxdb:1.3.5
     volumes:
       - ./data/influxdb:/var/lib/influxdb
+      - ./opt/collectd/share/collectd:/opt/collectd/share/collectd
     ports:
       - "8086:8086"
+      - "25826:25826"
 
   # Define a grafana service
   grafana:
