updated collect hooks

--- a/etc/collectd.conf
+++ b/etc/collectd.conf
@@ -9,7 +9,7 @@ LoadPlugin memory
 LoadPlugin network
 # LoadPlugin rrdtool
 <Plugin network>
-  Listen "0.0.0.0"
+  Server "influxdb" "25826"
 </Plugin>
 Include "/etc/collectd.d"
 
